--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/_GridViewPartial_empleados.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/_GridViewPartial_empleados.cshtml
@@ -2,7 +2,7 @@
 @{
     var grid = Html.DevExpress().GridView(settings => {
         settings.Name = "GridView_empleados";
-        settings.CallbackRouteValues = new { Controller = "Empleado", Action = "GridViewPartial_empleados" };
+        settings.CallbackRouteValues = new { Controller = "Empleado", Action = "GridViewPartial_empleados", IdSucursal = ViewBag.IdSucursal };
 
         settings.Width = Unit.Percentage(100);
         settings.KeyFieldName = "IdEmpleado";
