--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Index.cshtml
@@ -1,23 +1,75 @@
-﻿@using Core.Erp.Web.Helps
+﻿﻿@using Core.Erp.Web.Helps
+@model Core.Erp.Info.Helps.cl_filtros_Info
 @{
     ViewBag.Title = "Empleados";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
     }
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Layout/_LayoutConsulta.cshtml";
 }
-
-@using (Html.BeginForm())
+<script src="~/Scripts/ValidacionBotonSubmit.js"></script>
+@using (Html.BeginForm("Index", "Empleado", FormMethod.Post, new { @role = "form", @class = "form" }))
 {
-    <div class="row">
-        <div class="col-md-12">
-            <a class="btn btn-primary" href="@Url.Action("Importar","Empleado",new { Area = "RRHH", IdEmpresa = SessionFixed.IdEmpresa },null)">Importar desde excel</a>
+    @Html.HiddenFor(q => q.IdEmpresa)
+    <div class="box ">
+        <div class="box-header with-border">
+            <div class="row">
+                <div class="col-md-12">
+                    <button type="submit" class="btn btn-primary">Aplicar filtros</button>
+                </div>
+            </div>
+            <div class="box-tools pull-right">
+                <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
+                    <i class="fa fa-minus"></i>
+                </button>
+                <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
+                    <i class="fa fa-times"></i>
+                </button>
+            </div>
         </div>
+        <div class="box-body">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <label for="IdSucursal">Sucursal*</label>
+                            @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_descripcion"), new { @class = "form-control", @id = "IdSucursal" })
+                            @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- /.box-body -->
     </div>
 
-    @Html.Action("GridViewPartial_empleados")
+    <div class="box">
+        <div class="box-header with-border">
+            <h3 class="box-title">@ViewBag.Title</h3>
+            <div class="box-tools pull-right">
+                <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
+                    <i class="fa fa-minus"></i>
+                </button>
+                <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
+                    <i class="fa fa-times"></i>
+                </button>
+            </div>
+        </div>
+        <div class="box-body">
+            <div class="row">
+                <div class="col-md-12">
+                    <a class="btn btn-primary" href="@Url.Action("Importar","Empleado",new { Area = "RRHH", IdEmpresa = SessionFixed.IdEmpresa },null)">Importar desde excel</a>
+                </div>
+            </div>
+
+            @Html.Action("GridViewPartial_empleados", new {IdSucursal = Model.IdSucursal})
+        </div>
+        <!-- /.box-body -->
+        <div class="box-footer">
+            [@Session["IdEmpresa"]] @Session["nom_empresa"]
+        </div>
+        <!-- /.box-footer-->
+    </div>
 
 }
-
-
