--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Cliente/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Cliente/Nuevo.cshtml
@@ -216,7 +216,7 @@
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="FormaPago">Dirección</label>
+                                <label for="FormaPago">Dirección*</label>
                                 @Html.TextBoxFor(q => q.info_fa_cliente_contactos.Direccion, new { @class = "form-control" })
                                 @Html.ValidationMessageFor(q => q.info_fa_cliente_contactos.Nombres, "", new { @class = "text-danger" })
                             </div>
