--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/SolicitudPago/_GridViewPartial_solicitud_pago.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/SolicitudPago/_GridViewPartial_solicitud_pago.cshtml
@@ -85,7 +85,7 @@
             c.Width = Unit.Pixel(150);
         });
         settings.Columns.Add("IdSolicitud", "Id").Width = Unit.Percentage(5);
-        settings.Columns.Add("info_proveedor.info_persona.pe_nombreCompleto", "Proveedor").Width = Unit.Percentage(25);
+        settings.Columns.Add("pe_nombreCompleto", "Proveedor").Width = Unit.Percentage(25);
         settings.Columns.Add("Concepto", "Descripción").Width = Unit.Percentage(30);
         settings.Columns.Add("Solicitante", "Solicitante").Width = Unit.Percentage(20);
         settings.Columns.Add(column =>
