--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ChequeBanco/_GridViewPartial_cheque_op.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ChequeBanco/_GridViewPartial_cheque_op.cshtml
@@ -10,6 +10,7 @@
         settings.Settings.ShowGroupPanel = false;
         settings.Settings.ShowFilterRow = true;
         settings.SettingsBehavior.AllowSelectByRowClick = false;
+        settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "ChequeBanco", Action = "EditingUpdateFactura", Area = "Banco" };
         settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "ChequeBanco", Action = "EditingDeleteFactura", Area = "Banco" };
 
         //Configuración para que la grilla no muestre texto completo
@@ -24,7 +25,7 @@
 
         settings.CommandColumn.Visible = true;
         settings.CommandColumn.ShowNewButton = false;
-        settings.CommandColumn.ShowEditButton = false;
+        settings.CommandColumn.ShowEditButton = true;
         settings.CommandColumn.ShowDeleteButton = true;
 
         //Configuracion responsive
@@ -34,10 +35,23 @@
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
 
-
-        settings.Columns.Add("IdOrdenPago_op","ID").Width = Unit.Percentage(10);
-        settings.Columns.Add("Referencia", "# Documento").Width = Unit.Percentage(20);
+        settings.Columns.Add(column =>
+        {
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+            column.Width = Unit.Percentage(10);
+            column.FieldName = "IdOrdenPago_op";
+            column.Caption = "ID";
+        });
+        settings.Columns.Add(column =>
+        {
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+            column.Width = Unit.Percentage(20);
+            column.FieldName = "Referencia";
+            column.Caption = "# Documento";
+        });
+        
         settings.Columns.Add(column => {
+            column.EditFormSettings.Visible = DefaultBoolean.False;
             column.Width = Unit.Percentage(10);
             column.FieldName = "Fecha_Fa_Prov";
             column.Caption = "Fecha";
@@ -45,12 +59,14 @@
         });
         settings.Columns.Add(column =>
         {
+            column.EditFormSettings.Visible = DefaultBoolean.False;
             column.Width = Unit.Percentage(40);
             column.FieldName = "pe_nombreCompleto";
             column.Caption = "Beneficiario";
         });
         settings.Columns.Add(column =>
         {
+            column.EditFormSettings.Visible = DefaultBoolean.True;
             column.Width = Unit.Percentage(10);
             column.FieldName = "MontoAplicado";
             column.Caption = "Valor aprobado";
