--- a/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/_CmbFlujo_ConciliacionCaja.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/_CmbFlujo_ConciliacionCaja.cshtml
@@ -12,7 +12,7 @@
         settings.Properties.TextField = "Descricion";
         settings.Properties.TextFormatString = "[{0}] {1}";
         settings.Properties.ValueField = "IdTipoFlujo";
-        settings.Properties.ValueType = typeof(Nullable<decimal>);
+        settings.Properties.ValueType = typeof(decimal);
 
         settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
         settings.Properties.AllowNull = true;
